--- a/css/style.css
+++ b/css/style.css
@@ -11,8 +11,8 @@ html {
 
 /* Top Bar  */
 #top-bar {
-    background-color: #266A95;
-    font-size: 15px;
+    background-color: #1E6692;
+    font-size: 13px;
 }
 
 .contact-info {}
@@ -22,8 +22,8 @@ html {
     color: #fff;
 }
 
-#top-bar i, span {
-    color: rgb(252, 245, 245);
+#top-bar i,
+span {
     padding: 10px;
 }
 
@@ -45,16 +45,6 @@ html {
 }
 
 /* Slider  */
-/* html,body,.carousel,.carousel-inner,.carousel-item{height: 100%;}
-.carousel-item{
-    background-size: cover;
-    background-position: center;
-}
-.carousel-caption{
-    transform: translate(-50%);
-    bottom: initial;
-    top: 50%;
-} */
 .carousel-item img {
     max-height: 700px;
     filter: brightness(45%);
@@ -65,29 +55,68 @@ html {
 }
 
 .carousel-caption h1 {
-    font-size: 70px;
+    font-size: 55px;
     text-transform: uppercase;
-    letter-spacing: 2px;
+    letter-spacing: 8px;
     color: #fff;
     font-weight: 700;
+    text-shadow: 2px 2px 4px #000000;
 }
 
 .carousel-caption p {
     font-size: 20px;
     letter-spacing: 6px;
+    text-shadow: 2px 2px 4px #000000;
 }
 
 .carousel-caption span {
-    color: rgb(11, 194, 21);
+    color: #30C730;
     font-weight: bolder;
-
+    text-shadow: none;
 }
 
-
-/* About */
+/* About Start*/
 #about {
-    padding-top: 150px;
+    padding-top: 100px;
 }
+
+#about h1 {
+    color: #1C6390;
+    font-weight: 600;
+    letter-spacing: 5px;
+    margin-bottom: 20px;
+}
+
+#about p {
+    font-size: 16px;
+    text-align: justify;
+
+}
+
+#about p span {
+    display: block;
+}
+
+.mission-vission {}
+
+/* About End*/
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 /* Key factor  Start*/
@@ -97,7 +126,8 @@ html {
     background-repeat: no-repeat;
     background-size: cover;
 }
-.key-factor h1{
+
+.key-factor h1 {
     text-transform: uppercase;
     margin-top: 30px;
     font-size: 30px;
@@ -109,6 +139,7 @@ html {
     border: 2px solid #fff;
     padding: 15px 30px;
 }
+
 /* Key factor  End*/
 
 
