--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,11 +1,22 @@
 @media screen and (max-width: 600px) {
     .carousel-caption h1 {
-        font-size: 25px;
+        font-size: 20px;
     }
+}
+@media screen and (max-width: 772px) {
     #top-bar {
         font-size: 9px;
     }
-    #top-bar .social-links{
+    .contact-info{
+        align-items: center;
+        margin: auto;
+    }
+    .social-links{
         display: none;
+    }
+}
+@media screen and (max-width: 991px) {
+    .supply-col {
+        margin-top: 30px;
     }
 }
